--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <script src="lib/p5.dom.js"></script>
     <script src="lib/p5.sound.js"></script>
     <script src="lib/p5.collide2d.js"></script>
-    <script src="script/sketch.js"></script>
-    <script src="script/bubble.js"></script>
-    <script src="script/player.js"></script>
+
+    <link href="css/master.css" rel="stylesheet">
+
   </head>
   <body>
-
-
   </body>
+
+  <script src="script/sketch.js"></script>
+  <script src="script/bubble.js"></script>
+  <script src="script/player.js"></script>
+
 </html>
